...
  } else {
    Text(text = value, modifier = modifier.clickable(onClick = { showDialog = true }))
  }

  if (showDialog) {
    DatePickerDialog(
        modifier = Modifier.testTag("datePickerDialog"),
        onDismissRequest = { showDialog = false },
        confirmButton = {
          Button(
              modifier = Modifier.testTag("datePickerDialogOk"),
              onClick = {
                showDialog = false
                onDateSelect(selectedDate)
              }) {
                Text(text = "OK")
              }
        },
        dismissButton = {
          Button(
              modifier = Modifier.testTag("datePickerDialogCancel"),
              onClick = {
                showDialog = false
                onDateSelect(null)
              }) {
                Text(text = "Cancel")
              }
...
